--- a/ara-server/Containerfile
+++ b/ara-server/Containerfile
@@ -21,7 +21,7 @@ FROM python:3.13-slim
 
 ENV TZ=UTC
 
-ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
+ADD --chmod=0755 https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
 
 COPY --from=builder /wheels /wheels
 COPY files/requirements.txt /requirements.txt
@@ -35,7 +35,6 @@ RUN apt-get update \
     && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels --pre -r /requirements.txt \
     && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels "ara[server]" \
     && useradd ara-server \
-    && chmod +x /wait \
     && rm -rf /var/lib/apt/lists/* /wheels /requirements.txt
 
 USER ara-server
