--- a/homer/Containerfile
+++ b/homer/Containerfile
@@ -47,5 +47,5 @@ ENTRYPOINT ["/bin/sh", "/entrypoint.sh"]
 LABEL "org.opencontainers.image.documentation"="https://osism.tech/docs/" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
       "org.opencontainers.image.source"="https://github.com/osism/container-images" \
-      "org.opencontainers.image.url"="https://quay.io/organization/osism" \
+      "org.opencontainers.image.url"="https://quay.io/repository/osism/homer" \
       "org.opencontainers.image.vendor"="OSISM GmbH"
