github: add dtrack env vars
Related to 5e0a3af305e472886bcc65bd1a485f2712600d68

Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-dnsmasq-osism-container-image.yml
+++ b/.github/workflows/build-dnsmasq-osism-container-image.yml
@@ -44,6 +44,8 @@ jobs:
         run: |
           scripts/push.sh
         env:
+          DTRACK_API_KEY: ${{ secrets.DTRACK_API_KEY }}
+          DTRACK_SERVER: ${{ secrets.DTRACK_SERVER }}
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
           IMAGE: dnsmasq-osism
           REPOSITORY: osism/dnsmasq-osism
