--- a/.github/workflows/build-netbox-container-image.yml
+++ b/.github/workflows/build-netbox-container-image.yml
@@ -51,6 +51,8 @@ jobs:
         run: |
           scripts/push.sh
         env:
+          DTRACK_API_KEY: ${{ secrets.DTRACK_API_KEY }}
+          DTRACK_SERVER: ${{ secrets.DTRACK_SERVER }}
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
