--- a/.github/workflows/build-nexus-container-image.yml
+++ b/.github/workflows/build-nexus-container-image.yml
@@ -49,6 +49,8 @@ jobs:
         run: |
           scripts/push.sh
         env:
+          DTRACK_API_KEY: ${{ secrets.DTRACK_API_KEY }}
+          DTRACK_SERVER: ${{ secrets.DTRACK_SERVER }}
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
           IMAGE: nexus
           REPOSITORY: osism/nexus
