Group renovate PRs for the netbox requirements
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,5 +13,11 @@
         "- (?<currentValue>.*?)  # renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\n"
      ]
     }
+  ],
+  "packageRules": [
+    {
+      "matchPaths": ["netbox/requirements.txt"],
+      "groupName": "netbox"
+    }
   ]
 }
