Add more files to the new renovate netbox group
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -16,7 +16,7 @@
   ],
   "packageRules": [
     {
-      "matchPaths": ["netbox/requirements.txt"],
+      "matchPaths": ["netbox/requirements.txt", "netbox/Containerfile", ".github/workflows/build-netbox-container-image.yml"],
       "groupName": "netbox"
     }
   ]
