--- a/.github/workflows/build-nexus-container-image.yml
+++ b/.github/workflows/build-nexus-container-image.yml
@@ -27,7 +27,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup docker
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-docker-action@v4
+        with:
+          daemon-config: |
+            {
+              "features": {
+                "containerd-snapshotter": true
+              }
+            }
 
       - name: Login to container registry
         uses: docker/login-action@v3
