--- a/tempest/files/requirements.txt
+++ b/tempest/files/requirements.txt
@@ -1,4 +1,13 @@
 tempest==43.0.0
+# https://docs.openstack.org/tempest/latest/plugins/plugin-registry.html#detected-plugins
 barbican-tempest-plugin
+cinder-tempest-plugin
 designate-tempest-plugin
+glance-tempest-plugin
+ironic-tempest-plugin
+keystone-tempest-plugin
+magnum-tempest-plugin
+manila-tempest-plugin
+neutron-tempest-plugin
 octavia-tempest-plugin
+telemetry-tempest-plugin
