--- a/seed/Containerfile
+++ b/seed/Containerfile
@@ -1,5 +1,7 @@
-ARG PYTHON_VERSION=3.12
+ARG PYTHON_VERSION=3.13
 FROM python:${PYTHON_VERSION}-alpine
+
+COPY --from=ghcr.io/astral-sh/uv:0.6.10 /uv /usr/local/bin/uv
 
 COPY files/requirements.txt /requirements.txt
 COPY files/requirements.yml /requirements.yml
@@ -14,8 +16,7 @@ RUN apk add --no-cache bash openssh-client sshpass \
       openssl-dev \
       python3-dev \
       rust \
-    && pip3 --no-cache-dir install --upgrade 'pip==25.0.1' \
-    && pip3 --no-cache-dir install -r /requirements.txt \
+    && uv pip install --no-cache --system -r /requirements.txt \
     && ansible-galaxy install -r /requirements.yml \
     && mkdir -p /opt/configuration/environments/manager \
     && apk del .build-deps
