--- a/ceph-daemon/Containerfile
+++ b/ceph-daemon/Containerfile
@@ -1,6 +1,8 @@
 ARG VERSION
 FROM quay.io/ceph/ceph:$VERSION
 
+COPY files/* /opt/ceph-container
+
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Change the UID and GID of the Ceph user/group from 167 to 64045.
@@ -10,6 +12,8 @@ RUN groupmod -g 64045 ceph
 # Adjust the permissions of all files and directories accordingly.
 RUN find / -path /proc -prune -o -group 167 -exec chgrp -h ceph {} \;
 RUN find / -path /proc -prune -o -user 167 -exec chown -h ceph {} \;
+
+ENTRYPOINT ["/opt/ceph-container/bin/entrypoint.sh"]
 
 LABEL "org.opencontainers.image.documentation"="https://osism.tech/docs/" \
       "org.opencontainers.image.licenses"="ASL 2.0" \
