--- a/ceph-daemon/Containerfile
+++ b/ceph-daemon/Containerfile
@@ -1,7 +1,8 @@
 ARG VERSION
 FROM quay.io/ceph/ceph:$VERSION
 
-COPY files/* /opt/ceph-container
+COPY files/bin /opt/ceph-container/
+COPY files/etc /opt/ceph-container/
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
