ceph-daemon: fix location of files (pt. 2)
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/ceph-daemon/Containerfile
+++ b/ceph-daemon/Containerfile
@@ -1,8 +1,8 @@
 ARG VERSION
 FROM quay.io/ceph/ceph:$VERSION
 
-COPY files/bin /opt/ceph-container/
-COPY files/etc /opt/ceph-container/
+COPY files/bin /opt/ceph-container/bin
+COPY files/etc /opt/ceph-container/etc
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
