cephclient: install ceph-base if version == squid
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/cephclient/Containerfile
+++ b/cephclient/Containerfile
@@ -30,6 +30,7 @@ RUN apt-get update \
     && apt-get install --no-install-recommends -y \
         ceph-common \
         fio \
+    && if [ $VERSION = "squid" ]; then apt-get install --no-install-recommends -y ceph-base; fi \
     && groupadd -g $GROUP_ID dragon \
     && useradd -g dragon -u $USER_ID -m -d /home/dragon dragon \
     && if [ ! -e /etc/bash_completion.d/ ]; then \
