cephclient: keep packages
Revert cb7a16408cfaa302127ef92e04781afc56aba516

Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/cephclient/Containerfile
+++ b/cephclient/Containerfile
@@ -42,8 +42,8 @@ RUN apt-get update \
     && apt-get remove -y \
         apt-transport-https \
         software-properties-common \
-        wget \
     && apt-get clean \
+    && apt-get autoremove -y \
     && mkdir /configuration \
     && rm -rf \
       /var/lib/apt/lists/* \
