--- a/netbox/Containerfile
+++ b/netbox/Containerfile
@@ -6,7 +6,8 @@ COPY --chmod=0755 files/launch.sh /opt/netbox/launch.sh
 COPY --from=ghcr.io/astral-sh/uv:0.7.14 /uv /usr/local/bin/uv
 
 RUN /usr/local/bin/uv pip install --no-cache -r /requirements.txt \
-    && chown -R unit: /opt/netbox/netbox/static
+    && chown -R unit: /opt/netbox/netbox/static \
+    && mkdir -p /opt/netbox/netbox/static/netbox_topology_views/img
 
 CMD [ "/opt/netbox/docker-entrypoint.sh", "/opt/netbox/launch.sh" ]
 
