--- a/netbox/requirements.txt
+++ b/netbox/requirements.txt
@@ -10,3 +10,4 @@ netbox-data-flows==1.1.1
 netbox-initializers==4.3.0
 netbox-plugin-dns==1.3.2
 netbox-secrets==2.3.0
+netbox-topology-views==4.3.0
