--- a/.github/workflows/build-cgit-container-image.yml
+++ b/.github/workflows/build-cgit-container-image.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install cosign
+        uses: sigstore/cosign-installer@v3.9.1
+
       - name: Setup docker
         uses: docker/setup-buildx-action@v3
 
