--- a/.github/workflows/build-nexus-container-image.yml
+++ b/.github/workflows/build-nexus-container-image.yml
@@ -52,6 +52,8 @@ jobs:
         run: |
           scripts/push.sh
         env:
+          COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
+          COSIGN_PRIVATE_KEY: ${{ secrets.COSIGN_PRIVATE_KEY }}
           DTRACK_API_KEY: ${{ secrets.DTRACK_API_KEY }}
           DTRACK_SERVER: ${{ secrets.DTRACK_SERVER }}
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
