tenks: use our fork for the moment
Use fork and sync with upstream instead of using patch files.

Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/tenks/Containerfile
+++ b/tenks/Containerfile
@@ -1,6 +1,6 @@
 FROM python:3.13-slim-bookworm
 
-ARG REPO=https://opendev.org/openstack/tenks.git
+ARG REPO=https://github.com/osism/openstack-tenks.git
 ARG VERSION=latest
 
 ARG USER_ID=45000
