--- a/ansible-lint/files/ansible-lint.yml
+++ b/ansible-lint/files/ansible-lint.yml
@@ -7,6 +7,7 @@ use_default_rules: true
 rulesdir:
   - ./.ansible-lint-rules/
 skip_list:
+  - galaxy[no-changelog]
   - name[unique]
   - yaml
 warn_list:
