cephclient: add support for Ceph Tentacle release
Add Tentacle version to the build matrix and Containerfile to enable
building cephclient images for the new Ceph release.

Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-cephclient-container-image.yml
+++ b/.github/workflows/build-cephclient-container-image.yml
@@ -26,6 +26,7 @@ jobs:
           - quincy
           - reef
           - squid
+          - tentacle
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
