tempest: install extras package
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/tempest/files/requirements.txt
+++ b/tempest/files/requirements.txt
@@ -1,4 +1,5 @@
 tempest==46.0.0
+extras
 # https://docs.openstack.org/tempest/latest/plugins/plugin-registry.html#detected-plugins
 barbican-tempest-plugin
 cinder-tempest-plugin
